kubernetes/components/cilium/overlays/k3d/httproute-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
  labels:
    app: hubble-ui
spec:
  hostnames:
    - hubble.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
